test_suite/alan-2022-examples/failing/002400_mutation.alan
source Y9i begin get put a end
